--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,14 +4,72 @@ body {
     margin: 0;
 }
 
-#sample {
+#container{
+    padding:0;
+    margin:0;
+}
+#ampmmap {
     height: 500px;
-    width: 700px;
+    width: 600px;
     margin-left: auto;
     margin-right: auto;
+}
+
+#location-heatmap {
+    height: 500px;
+    width: 600px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#activitymap {
+    height: 500px;
+    width: 600px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+h1{
+    padding-top:40px;
+}
+h2{
+    padding-top:20px;
+    padding-left:30px;
+    padding-right:30px;
+    padding-bottom:6px;
+}
+#info{
+    padding:30px;
 }
 body,
 html {
     height: 100%;
 }
-  
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  width:100%;
+  background-color: #333333;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+/* Change the link color to #111 (black) on hover */
+li a:hover {
+  background-color: #111;
+  color: #999999;
+  text-decoration:none;
+}
