--- a/templates/index.html
+++ b/templates/index.html
@@ -20,18 +20,102 @@
   <link rel="stylesheet" type="text/css" href="/static/css/style.css">
 </head>
 
-<body style="text-align: center;">
-  <h1>The Life of a Squirrel</h1>
-  <hr>
-  <!-- The div where we will inject our map -->
-  <h3>This is the location of 20 squirrels!</h3>
-  <div id="sample"></div>
+<body style="text-align: left; background-color:#555555;">
+    <div class="container" style="width:80%; margin:auto; background-color:white;">
+      <div class="header">
+        <h1>
+          <a name="top">Squirrel Census</a>
+        </h1>
+   </div>
+   <div class="nav"><ul>
 
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.2.3/d3.min.js"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-  <!-- API key -->
-  <script type="text/javascript" src="/static/js/config.js"></script>
+    <li><a href="#heat">Squirrel Locations</a></li>
+    <li><a href="#colors">Fur Colors</a></li>
+    <li><a href="#activity">Squirrel Activities</a></li>
+    <li><a href="#ampm">Night &amp; Day</a></li>
+    <li><a href="#runaway">Human Interaction</a></li>
+    <li><a href="#about">About</a></li>
+   </ul></div>
+  <!-- The div where we will inject our map -->
+<hr style="border:2px solid sienna">
+<hr style="border:2px solid silver">
+<hr style="border:2px solid black">
+
+  
+    <div id="title">
+      <h2><a name="heat">Squirrel Locations Heatmap</a></h2>
+    </div>
+    <div id="location-heatmap" style="width:100%;"></div>
+    <div id="info">
+      <p>Squirrels are all over Central Park. We see them in larger quantities in the broader green areas of the park, and away from water.</p>
+      <p><a href="#top">back to top</a></p>
+      <hr style="border:2px solid silver">
+    </div>
+
+    <div id="title">
+      <h2><a name="colors">Colors</a></h2>
+    </div>
+    <div id="color-barchart" style="width:100%;"></div>
+    <div id="info">
+      <p>Most of the squirrels "primary" fur color is gray, with some cinnamon and black squirrels in the park as well.</p>
+      <p><a href="#top">back to top</a></p>
+      <hr style="border:2px solid silver">
+    </div>
+          
+    <div id="title"><h2><a name="activity">Squirrel Activity</a></h2></div>
+    <div id="activitymap" style="width:100%;"></div>
+    <div id="info">
+          <p>Squirrels are doing a variety of different activities in Central Park. Volunteers recorded the squirrels
+            running, chasing, eating, and foraging. We look at the map to see where these activities take place (first day, morning activity).</p>
+          <p><a href="#top">back to top</a></p>
+          <hr style="border:2px solid silver">
+    </div>
+
+    <div id="title">
+      <h2><a name="ampm">AM/PM Difference</a></h2>
+    </div>
+    <div id="ampmmap" style="width:100%;"></div>
+    <div id="info">
+      <p>The squirrels' location differs a bit by day and by night. (First 300 records shown)</p>
+      <p><a href="#top">back to top</a></p>
+      <hr style="border:2px solid silver">
+    </div>
+
+
+    <div id="title">
+      <h2><a name="runaway">Human Reaction</a></h2>
+    </div>
+    <div id="runaway" style="width:100%;"></div>
+    <div id="info">
+      <p>Squirrels are mainly indifferent to the census takers.</p>
+      <p><a href="#top">back to top</a></p>
+    <hr style="border:2px solid silver">
+    </div>
+
+    <div id="title">
+      <h2><a name="about">About the Squirrel Census</a></h2>
+    </div>
+    <div id="info">
+      <p>For this project, we looked at data from the 2018 Squirrel Census, available at nycdata.</p>
+      <p>Team Members: Maxwell Wilbert, Sineekarn (Aom) Watcharawikran, Anne Marie Sticksel, Nick Majeski, Jimmy Heinz III</p>
+    <hr style="border:2px solid silver">
+    </div>
+
+
+    </div>
+
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.2.3/d3.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+
+    
+    <!-- API key -->
+    <script type="text/javascript" src="/static/js/config.js"></script>
   <!-- JS -->
-  <script type="text/javascript" src="/static/js/app.js"></script>
+    <script type="text/javascript" src="/static/js/app-anne.js"></script>
+    <script type="text/javascript" src="/static/js/plot2.js"></script>
+    <script type="text/javascript" src="/static/js/app-sw.js"></script>
+    <script type="text/javascript" src="/static/js/heat-chart.js"></script>
+    <script type="text/javascript" src="static/js/leaflet-heat.js"></script>
 </body>
 </html>
